<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_ue_wrapper</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ivan@soda.auto">Ivan Zhukov</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <build_depend>rclcpp</build_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>ackermann_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
